@@ -1,0 +1,14 @@
+Throughput.Throughput=throughput:default -p 10000
+Throughput.Endpoints=default -p 10000
+
+#Ice.Plugin.IceSSL=IceSSL:create
+IceSSL.Client.CertPath=../../../certs
+IceSSL.Client.Config=./sslconfig.xml
+IceSSL.Server.CertPath=../../../certs
+IceSSL.Server.Config=./sslconfig.xml
+
+Glacier.Router.Endpoints=default -p 10005
+Glacier.Router.Client.Endpoints=default
+
+# Uncomment the following lines if you want to run this demo with Glacier
+#Ice.Default.Router=Glacier/router:default -p 10005
